--- a/kitty.conf
+++ b/kitty.conf
@@ -272,7 +272,7 @@ include current-theme.conf
 
 #: Text cursor customization {{{
 
-# cursor #cccccc
+cursor #008B8B
 
 #: Default text cursor color. If set to the special value none the
 #: cursor will be rendered with a "reverse video" effect. Its color
@@ -284,7 +284,7 @@ include current-theme.conf
 #: some themes set this value, so if you want to override it, place
 #: your value after the lines where the theme file is included.
 
-# cursor_text_color #111111
+cursor_text_color #8B0000
 
 #: The color of text under the cursor. If you want it rendered with
 #: the background color of the cell underneath instead, use the
@@ -359,7 +359,7 @@ cursor_trail 200
 #: cursor_trail_start_threshold to control when a cursor trail is
 #: started.
 
-cursor_trail_decay 0.1 0.4
+cursor_trail_decay 0.2 0.8
 
 #: Controls the decay times for the cursor trail effect when the
 #: cursor_trail is enabled. This option accepts two positive float
@@ -605,7 +605,7 @@ cursor_trail_start_threshold 2
 #:  - -1.0
 #:  - 0.1 3.0 40 yes
 
-# url_color #0087bd
+url_color  #458588
 # url_style curly
 
 #: The color and style for highlighting URLs on mouse-over. url_style
