update some junk

--- a/kitty.conf
+++ b/kitty.conf
@@ -293,7 +293,7 @@ cursor_text_color #8B0000
 #: so if you want to override it, place your value after the lines
 #: where the theme file is included.
 
-# cursor_shape block
+cursor_shape beam
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
@@ -310,7 +310,7 @@ cursor_text_color #8B0000
 #: The unfocused cursor shape can be one of block, beam, underline,
 #: hollow and unchanged (leave the cursor shape as it is).
 
-# cursor_beam_thickness 1.5
+cursor_beam_thickness 1.8
 
 #: The thickness of the beam cursor (in pts).
 
@@ -379,7 +379,7 @@ cursor_trail_start_threshold 2
 #: When the cursor moves less than this threshold, the trail is
 #: skipped, reducing unnecessary cursor trail animation.
 
-# cursor_trail_color none
+cursor_trail_color #8B0000
 
 #: Set the color of the cursor trail when cursor_trail is enabled. If
 #: set to 'none' (the default), the cursor trail will use the cursor's
@@ -1467,7 +1467,7 @@ url_color  #458588
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.8
 
 #: The opacity of the terminal background color. A number between zero
 #: and one, where one is opaque and zero is fully transparent. This
@@ -2230,7 +2230,7 @@ url_color  #458588
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
