--- a/kitty.conf
+++ b/kitty.conf
@@ -2998,7 +2998,7 @@ kitty_mod ctrl
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="JetBrainsMono Nerd Font"
+font_family      family='JetBrainsMono Nerd Font' postscript_name=JetBrainsMonoNF-Regular
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
