--- a/kitty.conf
+++ b/kitty.conf
@@ -559,7 +559,7 @@ cursor_trail_color #8B0000
 
 #: Mouse {{{
 
-# mouse_hide_wait 3.0
+mouse_hide_wait 4.0
 
 #: Hide mouse cursor after the specified number of seconds of the
 #: mouse not being used. Set to zero to disable mouse cursor hiding.
@@ -959,7 +959,7 @@ url_color  #458588
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell yes
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -989,7 +989,7 @@ url_color  #458588
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
 
-# bell_on_tab "🔔 "
+bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
@@ -1278,7 +1278,7 @@ url_color  #458588
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-# tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
