--- a/kitty.conf
+++ b/kitty.conf
@@ -959,7 +959,7 @@ url_color  #458588
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+# enable_audio_bell yes
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -989,7 +989,7 @@ enable_audio_bell yes
 #: Request window attention on bell. Makes the dock icon bounce on
 #: macOS or the taskbar flash on Linux.
 
-bell_on_tab "🔔 "
+# bell_on_tab "🔔 "
 
 #: Some text or a Unicode symbol to show on the tab if a window in the
 #: tab that does not have focus has a bell. If you want to use leading
