--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1496,6 +1496,7 @@ background_opacity 0.8
 #: a performance cost). Changing this option when reloading the config
 #: will only work if dynamic_background_opacity was enabled in the
 #: original config.
+# dynamic_background_opacity yes
 
 # background_blur 0
 
